added  rpath for linux install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,15 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -Wall -g -fno-strict
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG -Wall -g -fno-strict-aliasing")
 
 include_directories(${JAVA_INCLUDE_PATH})  
+if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+	set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/package)
+	set(CMAKE_INSTALL_RPATH \$ORIGIN)
+	include_directories(${JAVA_INCLUDE_PATH}/linux)  
+endif()
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-set(CMAKE_JAVA_INCLUDE_PATH /Users/marc/.m2/repository/log4j/log4j/1.2.16/log4j-1.2.16.jar)
+#set(CMAKE_JAVA_INCLUDE_PATH /Users/marc/.m2/repository/log4j/log4j/1.2.16/log4j-1.2.16.jar)
+set(CMAKE_JAVA_INCLUDE_PATH /home/clean/.m2/repository/log4j/log4j/1.2.16/log4j-1.2.16.jar)
 
 set(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_BINARY_DIR}/com/animetrics/utils)
 
@@ -44,6 +50,7 @@ install_jar(com.animetrics.utils jar/)
 
 # add a test client 
 #set(CMAKE_JAVA_INCLUDE_PATH ${THE_JAR_FILE} /Users/marc/.m2/repository/log4j/log4j/1.2.16/log4j-1.2.16.jar)
-set(CMAKE_JAVA_INCLUDE_PATH com.animetrics.utils.jar /Users/marc/.m2/repository/log4j/log4j/1.2.16/log4j-1.2.16.jar)
+#set(CMAKE_JAVA_INCLUDE_PATH com.animetrics.utils.jar /Users/marc/.m2/repository/log4j/log4j/1.2.16/log4j-1.2.16.jar)
+set(CMAKE_JAVA_INCLUDE_PATH com.animetrics.utils.jar /home/clean/.m2/repository/log4j/log4j/1.2.16/log4j-1.2.16.jar)
 
 add_jar(testJniStdio testJniStdio.java)
